<resources>
    <string name="app_name">Flashcards</string>
    <string name="btn_start">Start</string>
    <string name="btn_favorites">Favorites</string>
    <string name="category_clothes">Clothes</string>
    <string name="category_professions">Professions</string>
    <string name="category_animals">Animals</string>
    <string name="category_fruits">Fruits</string>
    <string name="category_colors">Colors</string>
    <string name="selected_language">Select language</string>
    <string name="btn_next">Next</string>
    <string name="btn_favorite">Favorite</string>
    <string name="clothes_shirt">Shirt</string>
    <string name="clothes_pants">Pants</string>
    <string name="clothes_grove">Groves</string>
    <string name="clothes_shoes">Shoes</string>
    <string name="professions_doctor">Doctor</string>
    <string name="professions_fireman">Fireman</string>
    <string name="professions_baker">Baker</string>
    <string name="professions_nurse">Nurse</string>
    <string name="animals_bird">Bird</string>
    <string name="animals_horse">Horse</string>
    <string name="animals_dog">Dog</string>
    <string name="animals_lion">Lion</string>
    <string name="animals_sheep">Sheep</string>
    <string name="fruits_banana">Banana</string>
    <string name="fruits_grape">Grape</string>
    <string name="fruits_pineapple">Pineapple</string>
    <string name="colors_black">Black</string>
    <string name="colors_green">Green</string>
    <string name="colors_red">Red</string>
    <string name="colors_white">White</string>
    <string name="colors_yellow">Yellow</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Portuguese</item>
        <item>French</item>
        <item>Spanish</item>
    </string-array>
</resources>
