<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="32dp"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/labelLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_language"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:paddingEnd="32dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:text="@string/btn_start"
        android:layout_marginTop="10dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnFavorites"
        android:layout_width="380dp"
        android:layout_height="69dp"
        android:text="@string/btn_favorites"
        android:layout_marginTop="10dp"
        android:textSize="24sp" />
</LinearLayout>
